--- a/assets/css/src/style.css
+++ b/assets/css/src/style.css
@@ -77,6 +77,7 @@ input {
   height: 34px;
   background: #000 url( '../../img/logo.svg' );
   text-indent: -99999px;
+  margin: auto;
 }
 
 .widget {
@@ -89,7 +90,18 @@ input {
   padding-bottom: 43px;
 }
 
+.widget-nav a {
+  color: #999;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.widget-nav a:hover {
+  color: #000;
+}
+
 .addthis_native_toolbox iframe,
+.fb_iframe_widget,
 #___plusone_0 {
   vertical-align: top !important;
 }
@@ -106,6 +118,14 @@ input {
 .addthis_button_google_plusone,
 .addthis_button_facebook_like {
   margin-top: 10px;
+}
+
+@media ( max-width: 768px ) {
+
+  .widget-sharing {
+    display: none;
+  }
+
 }
 
 
@@ -219,6 +239,10 @@ input {
   line-height: 40px;
   cursor: pointer;
   text-align: center;
+}
+
+.color.light .color-code {
+  color: black;
 }
 
 @media screen and ( max-width: 768px ) {
