--- a/assets/css/src/app.css
+++ b/assets/css/src/app.css
@@ -53,7 +53,8 @@ input {
     top: 0;
     bottom: 0;
     left: 0;
-    width: 15%;
+    width: 25%;
+    box-shadow: inset -1px 0 #ddd;
   }
 
   body.admin-bar .site-header {
@@ -61,8 +62,7 @@ input {
   }
 
   .site-main {
-    margin-left: 15%;
-    box-shadow: -1px 0 #ddd;
+    margin-left: 25%;
   }
 
 }
@@ -83,11 +83,6 @@ input {
 .widget {
   padding: 20px;
   box-shadow: 0 1px #ddd;
-}
-
-.widget-title {
-  padding-top: 43px;
-  padding-bottom: 43px;
 }
 
 .widget-nav a {
@@ -120,10 +115,19 @@ input {
   margin-top: 10px;
 }
 
-@media ( max-width: 768px ) {
+@media screen and ( max-width: 768px ) {
 
   .widget-sharing {
     display: none;
+  }
+
+}
+
+@media screen and ( min-width: 769px ) {
+
+  .widget-title {
+    padding-top: 43px;
+    padding-bottom: 43px;
   }
 
 }
@@ -156,6 +160,7 @@ input {
 
 .collections {
   padding: 20px;
+  box-shadow: 0 1px #ddd;
 }
 
 @media screen and ( max-width: 768px ) {
@@ -173,7 +178,8 @@ input {
 
 .brand {
   padding: 20px;
-  box-shadow: inset 0 1px #ddd;
+  box-shadow: 0 1px #ddd;
+  user-select: none;
 }
 
 .brand-title {
