--- a/assets/less/brandcolors.less
+++ b/assets/less/brandcolors.less
@@ -10,11 +10,11 @@
 @import 'library/mixins';
 
 
-// DEFAULTS
+// CORE
 
-@import 'defaults/forms';
-@import 'defaults/media';
-@import 'defaults/typography';
+@import 'core/forms';
+@import 'core/media';
+@import 'core/typography';
 
 
 // COMPONENTS
