--- a/assets/less/core/forms.less
+++ b/assets/less/core/forms.less
@@ -3,6 +3,16 @@
 //
 
 
+// BASE
+
+input,
+button,
+select,
+textarea {
+  font: 16px @ff-main;
+}
+
+
 // TEXT INPUTS
 
 input[type="email"],
@@ -15,13 +25,19 @@ input[type="url"],
 textarea {
   display: block;
   width: 100%;
-  padding: 10px 20px;
+  padding: 10px 15px;
   border: none;
   border-radius: 2px;
-  box-shadow: inset 0 0 0 2px fade( black, 10% );
+  box-shadow: inset 0 0 0 1px fade( #3d464d, 15% ), inset 0 1px 3px fade( #3d464d, 15% );
+  transition: @tr-short;
 
   &::placeholder {
     color: #b6b6b6;
+  }
+
+  &:focus {
+    box-shadow: inset 0 0 0 1px #007ee5, inset 0 1px 3px fade( #3d464d, 15% );
+    outline: none;
   }
 }
 
