--- a/assets/less/core/typography.less
+++ b/assets/less/core/typography.less
@@ -3,26 +3,22 @@
 //
 
 
-body,
-input,
-button,
-select,
-textarea {
-  font: 300 16px/20px @ff-main;
+body {
+  font: 16px/20px @ff-main;
+  color: #3d464d;
 }
 
 a {
   text-decoration: none;
+  transition: @tr-short;
 }
 
 h1 {
   font-size: 20px;
   line-height: 20px;
-  font-weight: 400;
 }
 
 h2 {
   font-size: 16px;
   line-height: 20px;
-  font-weight: 300;
 }
