--- a/assets/less/components/brand.less
+++ b/assets/less/components/brand.less
@@ -5,10 +5,9 @@
 
 .brand {
   .cf;
-  padding: 22px 20px 20px;
-  box-shadow: inset 0 2px fade( black, 10% );
+  padding: 21px 20px 20px;
+  box-shadow: 0 1px fade( #3d464d, 15% );
   user-select: none;
-  background: white;
   cursor: pointer;
 
   .brand-header {
@@ -22,11 +21,24 @@
     border-radius: 50%;
     line-height: 24px;
     top: 8px;
-    left: -33px;
+    left: -32px;
     background: white;
-    box-shadow: inset 0 0 0 2px fade( black, 10% );
+    box-shadow: inset 0 0 0 1px fade( #3d464d, 15% );
     border-radius: 50%;
     opacity: 0;
+    transform: scale( .75 );
+    transition: .1s;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: linear-gradient( #4caeff, #007ee5 );
+    }
   }
 
   .brand-colors {
@@ -44,6 +56,8 @@
 
     &.is-collected .brand-check {
       opacity: 1;
+      transform: scale( 1 );
+      transition: .1s;
     }
 
     .brand-header {
