--- a/assets/less/components/button.less
+++ b/assets/less/components/button.less
@@ -13,14 +13,19 @@
   text-align: center;
   cursor: pointer;
   border: none;
-  background: linear-gradient( #03a9f4, #03a9f4 );
-  color: white;
+  box-shadow: 0 1px 3px fade( #3d464d, 15% );
+  background: linear-gradient( #4caeff, #007ee5 );
   padding: 10px 20px;
   border-radius: 2px;
   text-decoration: none;
-  text-transform: uppercase;
   font-weight: bold;
   font-size: 14px;
+  color: white;
+  transition: @tr-short;
+
+  &:hover {
+    background: linear-gradient( #5db6ff, #007ee5 );
+  }
 
   &:focus {
     outline: none;
