--- a/assets/less/modules/main.less
+++ b/assets/less/modules/main.less
@@ -5,10 +5,10 @@
 
 .main {
   @media @mq-lg-min {
+    padding: 80px 0 0 1px;
     float: right;
     width: 100%;
     min-height: 100vh;
-    padding-left: 2px;
-    box-shadow: inset 2px 0 fade( black, 10% );
+    box-shadow: inset 1px 0 fade( #3d464d, 15% );
   }
 }
