--- a/assets/less/brandcolors.less
+++ b/assets/less/brandcolors.less
@@ -19,10 +19,10 @@
 
 // COMPONENTS
 
+@import 'components/bci';
 @import 'components/button';
 @import 'components/brand';
 @import 'components/color';
-@import 'components/icon';
 
 
 // MODULES
