--- a/assets/less/modules/header.less
+++ b/assets/less/modules/header.less
@@ -28,40 +28,36 @@
   }
 
   .share-btn {
-    display: block;
-    margin-top: 10px;
-
-    .genericon {
-      margin-right: 10px;
-    }
+    width: 33.333333333%;
+    color: white;
 
     &.twitter {
-      &:hover {
-        color: #55acee;
-      }
+      background: #55acee;
+      background: linear-gradient( lighten( #55acee, 10% ), darken( #55acee, 10% ) );
 
-      .genericon {
-        color: #55acee;
+      &:hover {
+        background: lighten( #55acee, 5% );
+        background: linear-gradient( lighten( #55acee, 15% ), darken( #55acee, 10% ) );
       }
     }
 
     &.facebook {
-      &:hover {
-        color: #3b5998;
-      }
+      background: #3b5998;
+      background: linear-gradient( lighten( #3b5998, 10% ), darken( #3b5998, 10% ) );
 
-      .genericon {
-        color: #3b5998;
+      &:hover {
+        background: lighten( #3b5998, 5% );
+        background: linear-gradient( lighten( #3b5998, 15% ), darken( #3b5998, 10% ) );
       }
     }
 
     &.googleplus {
-      &:hover {
-        color: #dd4b39;
-      }
+      background: #dd4b39;
+      background: linear-gradient( lighten( #dd4b39, 10% ), darken( #dd4b39, 10% ) );
 
-      .genericon {
-        color: #dd4b39;
+      &:hover {
+        background: lighten( #dd4b39, 5% );
+        background: linear-gradient( lighten( #dd4b39, 15% ), darken( #dd4b39, 10% ) );
       }
     }
   }
