--- a/assets/less/components/button.less
+++ b/assets/less/components/button.less
@@ -13,9 +13,9 @@
   text-align: center;
   cursor: pointer;
   border: none;
-  box-shadow: 0 1px 3px fade( #3d464d, 15% );
-  background: #007aff;
-  background: linear-gradient( lighten( #007aff, 10% ), darken( #007aff, 10% ) );
+  box-shadow: 0 1px 3px fade( @co-mako, 15% );
+  background: @co-azure-radiance;
+  background: linear-gradient( lighten( @co-azure-radiance, 10% ), darken( @co-azure-radiance, 10% ) );
   padding: 10px 20px;
   border-radius: 2px;
   text-decoration: none;
@@ -25,8 +25,8 @@
   transition: @tr-short;
 
   &:hover {
-    background: lighten( #007aff, 5% );
-    background: linear-gradient( lighten( #007aff, 15% ), darken( #007aff, 10% ) );
+    background: lighten( @co-azure-radiance, 5% );
+    background: linear-gradient( lighten( @co-azure-radiance, 15% ), darken( @co-azure-radiance, 10% ) );
   }
 
   &:focus {
