--- a/assets/less/modules/access.less
+++ b/assets/less/modules/access.less
@@ -1,12 +1,17 @@
+//
+// ACCESS
+//
+
+
 .collection {
   .cf;
   padding: 20px;
-  color: #7b8994;
+  color: @co-slate-gray;
   position: fixed;
   right: 0;
   left: 301px;
   top: 0;
-  box-shadow: 0 1px fade( #3d464d, 15% );
+  box-shadow: 0 1px fade( @co-mako, 15% );
   background: fade( white, 95% );
   z-index: 1;
 
