--- a/assets/less/components/brand.less
+++ b/assets/less/components/brand.less
@@ -6,7 +6,7 @@
 .brand {
   .cf;
   padding: 21px 20px 20px;
-  box-shadow: 0 1px fade( #3d464d, 15% );
+  box-shadow: 0 1px fade( @co-mako, 15% );
   user-select: none;
   cursor: pointer;
 
@@ -23,7 +23,7 @@
     top: 8px;
     left: -32px;
     background: white;
-    box-shadow: inset 0 0 0 1px fade( #3d464d, 15% );
+    box-shadow: inset 0 0 0 1px fade( @co-mako, 15% );
     border-radius: 50%;
     opacity: 0;
     transform: scale( .75 );
@@ -37,7 +37,8 @@
       width: 16px;
       height: 16px;
       border-radius: 50%;
-      background: linear-gradient( #4caeff, #007ee5 );
+      background: @co-azure-radiance;
+      background: linear-gradient( lighten( @co-azure-radiance, 10% ), darken( @co-azure-radiance, 10% ) );
     }
   }
 
