--- a/assets/less/modules/access.less
+++ b/assets/less/modules/access.less
@@ -15,7 +15,7 @@
   background: fade( white, 95% );
   z-index: 1;
 
-  .current-collection {
+  .collection-label {
     float: left;
     line-height: 40px;
   }
