--- a/assets/less/modules/header.less
+++ b/assets/less/modules/header.less
@@ -28,7 +28,7 @@
   }
 
   .share-btn {
-    width: 33.333333333%;
+    width: 30%;
     color: white;
 
     &.twitter {
@@ -59,6 +59,10 @@
         background: lighten( @co-googleplus, 5% );
         background: linear-gradient( lighten( @co-googleplus, 15% ), darken( @co-googleplus, 10% ) );
       }
+    }
+
+    + .share-btn {
+      margin-left: 5%;
     }
   }
 
