--- a/assets/less/components/button.less
+++ b/assets/less/components/button.less
@@ -13,9 +13,7 @@
   text-align: center;
   cursor: pointer;
   border: none;
-  box-shadow: 0 1px 3px fade( @co-mako, 15% );
-  background: @co-azure-radiance;
-  background: linear-gradient( lighten( @co-azure-radiance, 10% ), darken( @co-azure-radiance, 10% ) );
+  background: @co-azure;
   padding: 10px 20px;
   border-radius: 2px;
   text-decoration: none;
@@ -25,8 +23,7 @@
   transition: @tr-short;
 
   &:hover {
-    background: lighten( @co-azure-radiance, 5% );
-    background: linear-gradient( lighten( @co-azure-radiance, 15% ), darken( @co-azure-radiance, 10% ) );
+    background: lighten( @co-azure, 5% );
   }
 
   &:focus {
