--- a/assets/less/modules/access.less
+++ b/assets/less/modules/access.less
@@ -6,12 +6,12 @@
 .collection {
   .cf;
   padding: 20px;
-  color: @co-slate-gray;
+  color: @co-boulder;
   position: fixed;
   right: 0;
   left: 301px;
   top: 0;
-  box-shadow: 0 1px fade( @co-mako, 15% );
+  box-shadow: 0 1px @co-alto;
   background: fade( white, 95% );
   z-index: 1;
 
