--- a/assets/less/core/forms.less
+++ b/assets/less/core/forms.less
@@ -28,15 +28,15 @@ textarea {
   padding: 10px 15px;
   border: none;
   border-radius: 2px;
-  box-shadow: inset 0 0 0 1px fade( @co-mako, 15% ), inset 0 1px 3px fade( @co-mako, 15% );
+  box-shadow: inset 0 0 0 1px @co-alto, inset 0 1px 3px @co-alto;
   transition: @tr-short;
 
   &::placeholder {
-    color: tint( @co-slate-gray, 50% );
+    color: tint( @co-boulder, 50% );
   }
 
   &:focus {
-    box-shadow: inset 0 0 0 1px @co-azure-radiance, inset 0 1px 3px fade( @co-mako, 15% );
+    box-shadow: inset 0 0 0 1px @co-azure, inset 0 1px 3px @co-alto;
     outline: none;
   }
 }
