--- a/assets/less/core/typography.less
+++ b/assets/less/core/typography.less
@@ -5,7 +5,7 @@
 
 body {
   font: 16px/20px @ff-main;
-  color: @co-mako;
+  color: @co-mine-shaft;
 }
 
 a {
@@ -21,4 +21,12 @@ h1 {
 h2 {
   font-size: 16px;
   line-height: 20px;
+}
+
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
 }
