--- a/assets/less/modules/header.less
+++ b/assets/less/modules/header.less
@@ -5,16 +5,10 @@
 
 .site-header {
   padding: 20px;
-  color: @co-mako;
+  color: @co-mine-shaft;
 
   a {
     color: inherit;
-  }
-
-  .logo {
-    display: block;
-    width: 46px;
-    height: 34px;
   }
 
   .description,
@@ -24,7 +18,7 @@
   }
 
   .description {
-    color: @co-slate-gray;
+    color: @co-boulder;
   }
 
   .share-btn {
@@ -33,31 +27,25 @@
 
     &.twitter {
       background: @co-twitter;
-      background: linear-gradient( lighten( @co-twitter, 10% ), darken( @co-twitter, 10% ) );
 
       &:hover {
         background: lighten( @co-twitter, 5% );
-        background: linear-gradient( lighten( @co-twitter, 15% ), darken( @co-twitter, 10% ) );
       }
     }
 
     &.facebook {
       background: @co-facebook;
-      background: linear-gradient( lighten( @co-facebook, 10% ), darken( @co-facebook, 10% ) );
 
       &:hover {
         background: lighten( @co-facebook, 5% );
-        background: linear-gradient( lighten( @co-facebook, 15% ), darken( @co-facebook, 10% ) );
       }
     }
 
     &.googleplus {
       background: @co-googleplus;
-      background: linear-gradient( lighten( @co-googleplus, 10% ), darken( @co-googleplus, 10% ) );
 
       &:hover {
         background: lighten( @co-googleplus, 5% );
-        background: linear-gradient( lighten( @co-googleplus, 15% ), darken( @co-googleplus, 10% ) );
       }
     }
 
@@ -68,7 +56,7 @@
 
   @media @mq-sm-max {
     text-align: center;
-    box-shadow: 0 1px fade( @co-mako, 15% );
+    box-shadow: 0 1px @co-alto;
 
     .logo {
       margin: auto;
